// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col"
>
  <h4
    className="mb-2"
  >
    Please select your age:
  </h4>
  <label
    className="RadioButtonLabel-ozr645-0 hlwLdP"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="RadioButtonHiddenInput-sc-17huvt0-0 fBEXtV"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="RadioButtonStyledInput__Content-sc-5ipqri-0 iqxINk"
    >
      <div
        className="RadioButtonStyledInput__Animation-sc-5ipqri-1 gUxEwa"
      />
    </span>
    <span
      className="RadioButtonCaption-sc-1dv62p7-0 eGGuNG"
    >
      0 - 30
    </span>
  </label>
  <label
    className="RadioButtonLabel-ozr645-0 hlwLdP"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="RadioButtonHiddenInput-sc-17huvt0-0 fBEXtV"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="RadioButtonStyledInput__Content-sc-5ipqri-0 iqxINk"
    >
      <div
        className="RadioButtonStyledInput__Animation-sc-5ipqri-1 gUxEwa"
      />
    </span>
    <span
      className="RadioButtonCaption-sc-1dv62p7-0 eGGuNG"
    >
      31 - 60
    </span>
  </label>
  <label
    className="RadioButtonLabel-ozr645-0 hlwLdP"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="RadioButtonHiddenInput-sc-17huvt0-0 fBEXtV"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="RadioButtonStyledInput__Content-sc-5ipqri-0 iqxINk"
    >
      <div
        className="RadioButtonStyledInput__Animation-sc-5ipqri-1 gUxEwa"
      />
    </span>
    <span
      className="RadioButtonCaption-sc-1dv62p7-0 eGGuNG"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="RadioButtonLabel-ozr645-0 hlwLdP"
>
  <input
    checked={true}
    className="RadioButtonHiddenInput-sc-17huvt0-0 fBEXtV"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="RadioButtonStyledInput__Content-sc-5ipqri-0 iqxINk"
  >
    <div
      className="RadioButtonStyledInput__Animation-sc-5ipqri-1 gUxEwa"
    />
  </span>
  <span
    className="RadioButtonCaption-sc-1dv62p7-0 eGGuNG"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="RadioButtonLabel-ozr645-0 hlwLdP"
>
  <input
    className="RadioButtonHiddenInput-sc-17huvt0-0 fBEXtV"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="RadioButtonStyledInput__Content-sc-5ipqri-0 iqxINk"
  >
    <div
      className="RadioButtonStyledInput__Animation-sc-5ipqri-1 gUxEwa"
    />
  </span>
  <span
    className="RadioButtonCaption-sc-1dv62p7-0 eGGuNG"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <label
      className="RadioButtonLabel-ozr645-0 hlwLdP"
      htmlFor="button1"
    >
      <input
        className="RadioButtonHiddenInput-sc-17huvt0-0 fBEXtV"
        id="button1"
        name="button"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="RadioButtonStyledInput__Content-sc-5ipqri-0 iqxINk"
      >
        <div
          className="RadioButtonStyledInput__Animation-sc-5ipqri-1 gUxEwa"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <h4
      className="mb-2"
    >
      Please select your age:
    </h4>
    <label
      className="RadioButtonLabel-ozr645-0 hlwLdP"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="RadioButtonHiddenInput-sc-17huvt0-0 fBEXtV"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="RadioButtonStyledInput__Content-sc-5ipqri-0 iqxINk"
      >
        <div
          className="RadioButtonStyledInput__Animation-sc-5ipqri-1 gUxEwa"
        />
      </span>
      <span
        className="RadioButtonCaption-sc-1dv62p7-0 eGGuNG"
      >
        0 - 30
      </span>
    </label>
    <label
      className="RadioButtonLabel-ozr645-0 hlwLdP"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="RadioButtonHiddenInput-sc-17huvt0-0 fBEXtV"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="RadioButtonStyledInput__Content-sc-5ipqri-0 iqxINk"
      >
        <div
          className="RadioButtonStyledInput__Animation-sc-5ipqri-1 gUxEwa"
        />
      </span>
      <span
        className="RadioButtonCaption-sc-1dv62p7-0 eGGuNG"
      >
        31 - 60
      </span>
    </label>
    <label
      className="RadioButtonLabel-ozr645-0 hlwLdP"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="RadioButtonHiddenInput-sc-17huvt0-0 fBEXtV"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="RadioButtonStyledInput__Content-sc-5ipqri-0 iqxINk"
      >
        <div
          className="RadioButtonStyledInput__Animation-sc-5ipqri-1 gUxEwa"
        />
      </span>
      <span
        className="RadioButtonCaption-sc-1dv62p7-0 eGGuNG"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
